fixed search-bar input alignment

--- a/src/components/search-box/search-box.styles.css
+++ b/src/components/search-box/search-box.styles.css
@@ -4,11 +4,11 @@
     border-radius: 10px;
     outline: none;
     margin-bottom: 30px;
-    padding: 10px;
+    padding: 10px 10px 10px 40px;
     width: 300px;
     background-color: rgba(255,255,255, 0.2);
     line-height: 30px;
-    text-align: center;
+    text-align: start;
     font-size: 1.5rem;
 }
 
